fix weird spacing on youtube media buttons

--- a/sass/support-bar.scss
+++ b/sass/support-bar.scss
@@ -195,7 +195,7 @@ $nav-secondary: #2A2C2B;
     color: white;
     text-decoration: none;
     font-family: sans-serif;
-    margin: 0.25em 0.5em;
+    margin: 0;
     &:hover {
       color:#aaa;
     }
